--- a/index.htm
+++ b/index.htm
@@ -9,16 +9,16 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
- 
+
     <title>To do list</title>
 </head>
 
 <body>
-    <div class="alma">
-        <div class="armud"></div>
-        <div class="nar">
+    <div class="dord">
+        <div class="bar"></div>
+        <div class="bes">
             <h2>To-Do List</h2>
-            <button class="kartof">
+            <button class="sort-btn">
                 <svg width="27" height="27" viewBox="0 0 25 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect x="2.5" width="2.5" height="12.5" fill="#C4C4C4" />
                     <rect x="10" y="3.75" width="2.5" height="7.5" transform="rotate(-90 10 3.75)" fill="#C4C4C4" />
@@ -28,11 +28,11 @@
                 </svg>
             </button>
 
-            <ul class="pomidor"> </ul>
+            <ul class="bir"> </ul>
 
-            <div class="gilas">
-                <div><button class="ustune"> + </button></div>
-                <div class="kuku"> Add To-Do </div>
+            <div class="iki">
+                <div><button class="plus"> + </button></div>
+                <div class="uc"> Add To-Do </div>
             </div>
 
         </div>
